--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,28 @@
-# Set the name of the workflow
-name: Deploy to Azure App Service
 
-# Set the events that will trigger the workflow
 on:
-  push:
+ push:
     branches:
       - main
-
-# Define the jobs to be run in the workflow
+name: 🚀 Deploy website on push
 jobs:
-
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - name: Use Node.js 16
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
-      - name: npm install, build
-        run: |
-          # Build and test the project, then
-          # deploy to Azure Web App.
-          npm install
-          npm run build
-        working-directory: /site/wwwroot/wp-content/themes/test-theme/
-      - name: 'Deploy to Azure WebApp'
-        uses: azure/webapps-deploy@v2
-        with: 
-          app-name: kmq-ngen-tlp-wordpress
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
+    - name: 'Deploy to Azure WebApp'
+      uses: azure/webapps-deploy@v2
+      with: 
+        app-name: kmq-ngen-tlp-wordpress
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
