--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       with: 
         app-name: kmq-ngen-tlp-wordpress
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: $(System.DefaultWorkingDirectory)/**/*.zip
+        package: $(System.DefaultWorkingDirectory)/**/*
