--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,6 @@ jobs:
       with: 
         app-name: kmq-ngen-tlp-wordpress
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    - task: CmdLine@2
-      inputs:
-        script: |
-          echo  '$(System.DefaultWorkingDirectory)'
-          ls
+    - script:
+      workingDirectory: /site/wwwroot/wp-content/themes/
       
