--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       with: 
         app-name: kmq-ngen-tlp-wordpress
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        app-location: wp-content/themes/
+        package: /wp-content/themes/
       
