--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.1.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "crypto-js": "^4.1.1"
   }
 }
