--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@wordpress/scripts": "^23.3.0",
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "react-router-dom": "^6.4.5"
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
