--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "crypto-js": "^4.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0"
