--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wordpress/scripts": "^23.3.0",
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
+    "process": "^0.11.10",
     "react-router-dom": "^6.4.5",
     "tailwindcss": "^3.1.4"
   },
@@ -32,6 +33,7 @@
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
