--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "preview": "npm-run-all --parallel sync wpstart tailwindwatch",
     "sync": "browser-sync start -p 'myexample.local' --files '**/*.php' 'build/*.js' 'build/*.css'",
-    "buildwp": "wp-scripts build",
+    "postbuild": "rimraf build/**/*.map",
+    "buildwp": "wp-scripts build && npm run postbuild",
     "build": "npm-run-all --sequential buildwp tailwindbuild",
-    "wpstart": "wp-scripts start",
+    "wpstart": " wp-scripts start",
     "start": "npm-run-all --parallel wpstart tailwindwatch",
     "tailwindbuild": "tailwindcss -i ./src/index.css -o ./build/index.css --minify",
     "tailwindwatch": "tailwindcss -i ./src/index.css -o ./build/index.css --watch --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
