--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "tailwindbuild": "tailwindcss -i ./src/index.css -o ./build/index.css --minify",
     "tailwindwatch": "tailwindcss -i ./src/index.css -o ./build/index.css --watch --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "keywords": [],
   "author": "",
@@ -24,6 +23,8 @@
     "@tailwindcss/typography": "^0.5.2",
     "@wordpress/scripts": "^23.3.0",
     "browser-sync": "^2.27.10",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "process": "^0.11.10",
     "react-router-dom": "^6.4.5",
@@ -33,7 +34,6 @@
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
